--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,7 +18,7 @@ requires-python = ">=3.13"
 dependencies = [
     "bleak==0.22.3",
     "bleak-retry-connector==3.8.1",
-    "cryptography==44.0.1",
+    "cryptography>=43.0.1",
 ]
 
 [project.urls]
